Fixed about2 layout on mobile

--- a/html/css/landing-styles.css
+++ b/html/css/landing-styles.css
@@ -78,6 +78,8 @@ ul {
 .no-margin {
     margin:0;
 } 
+
+/* specific helper classes */
 .my-slides {
     width: 100%;
     z-index: -1;
@@ -87,7 +89,9 @@ ul {
     right: 0; 
     padding-left: 5%;
 }
-
+.left-padded-div {
+    padding-left: 5%;
+}
 /* responsiveness */
 @media only screen and (max-width: 334px) {
     #navigation-contact {
@@ -108,6 +112,9 @@ ul {
         width: 75px;
         height: 75px;
         font-size: 10px;
+    }
+    .left-padded-div {
+    	padding-left: 0;
     }
 }
 @media only screen and (max-width: 700px) {
